helm-charts/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-lb
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "unafamilia.online"
      secretName: "tls-cert"
  rules:
  - host: "unafamilia.online"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: "core-chart"
            port:
              number: 80
